force-app/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <label>Delivery</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>