force-app/main/default/objects/Delivery__c/fields/Delivery_Agent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>