force-app/main/default/objects/Delivery__c/validationRules/ETA_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ETA_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Assigned&quot;),
    ISBLANK(ETA__c)
)</errorConditionFormula>
    <errorMessage>ETA must be set when a delivery is assigned.</errorMessage>
</ValidationRule>